Fix blog entry 2023-01-23-final

--- a/blog/2023-01-23-final.md
+++ b/blog/2023-01-23-final.md
@@ -1,14 +1,14 @@
 # NumTrip
 ## Konsolen- und Fensterbasiert
 
-![](docs/images/numtrip_screenshots.png)
+![](images/numtrip_screenshots.png)
 
 ### Ziel des spiels
 Im Spiel NumTrip können in einem Spielfeld Felder, welche einen Wert besitzen, kombiniert werden. Dabei werden alle Nachbarfelder absorbiert, welche den selben Wert haben wie das ausgewählte Feld. Das Ziel des Spiels ist es, bis zum erreichen eines Feldes mit dem Wert 1024 einen möglichst hohen Score zu erzielen, ohne Game Over zu gehen. Game Over ist man, wenn keine Felder mehr kombiniert werden können und der Score wird berechnet, indem die Anzahl im Zug absorbierter Felder mit dem Wert des resultierenden Feldes multipliziert und zu dem vorherigen Score addiert wird.
 
 ### Top-Down Entwurf
 Der Top-Down Entwurf meines NumTrip Spiels sieht wiefolgt aus:
-![](docs/images/numtrip_topdown.png)
+![](images/numtrip_topdown.png)
 
 ### Auffüllen des Spielfelds
 Das Auffüllen des Spielfeldes habe ich auf eine meiner Meinung nach naheliegende und doch kreative Art gelöst. Der Ablauf ist ziemlich simpel und beinhaltet nur wenige Schritte. Das Spielfeld ist bei der Übergabe in die Funktion als zweidimensionale Liste Zeile um Zeile gespeichert. Im ersten Schritt wird das Spielfeld quasi rotiert, so dass das Spielfeld nun Spalte um Spalte in der Liste gespeichert ist.
